<resources>
    <string name="app_name">CoffeeApp</string>
    <string name="email_hint">your email</string>
    <string name="password_hint">your password</string>
    <string name="hint_password">your password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="qs">Forgot Password?</string>
    <string name="register">Create New Account</string>
    <string name="or">----------------------OR----------------------</string>
    <string name="hello">Hi User</string>
    <string name="email_info">Email:</string>
    <string name="name_info">Name:</string>
    <string name="demo_email">AhmedAli@gmail.com</string>
    <string name="demo_name">Ahmed Ali</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="goToProduct">hell</string>
    <string name="inc">+</string>
    <string name="one">1</string>
    <string name="dec">-</string>
    <string name="size">Size</string>
    <string name="dot">.</string>
    <string name="sugar">Sugar</string>
    <string name="additions">Additions</string>
    <string name="total">Total:</string>
    <string name="demo_price">100EGP</string>
    <string name="add_to_card">Add to cart</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="order">Select Order</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="confirm">CONFIRM</string>
    <string name="save">SAVE</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_cost">Total Cost :</string>
    <string name="clear_all">Clear Cart</string>
    <string name="old_password">Old Password</string>
</resources>