<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:padding="16dp">

    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/hello"
        android:textColor="@color/brown"
        android:textSize="20sp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintTop_toBottomOf="@id/hi"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:civ_border_color="@color/brown"
        app:civ_border_width="2dp"
        />
    <TextView
        android:id="@+id/email_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email_info"
        android:textColor="@color/brown"
        android:layout_marginTop="100dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/demo_email"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintLeft_toRightOf="@id/email_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view" />

    <TextView
        android:id="@+id/name_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email_info"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/name_info"
        android:textColor="@color/brown"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/demo_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toRightOf="@id/name_info"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email" />

</androidx.constraintlayout.widget.ConstraintLayout>