<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <View
        android:id="@+id/Topview"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@color/light_cafe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/Waveview"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Topview" />


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="Welcome Back!"
        android:textColor="@color/splash_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Waveview" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="12dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundstyle"
            android:backgroundTint="@color/brown"
            android:text="@string/login"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/qs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/qs"
            android:textColor="@color/brown"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/register"
            android:textColor="@color/brown"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>