<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserProfileActivity">
    <include
        android:id="@+id/include"
        layout="@layout/toolbar"/>
    <FrameLayout
        android:id="@+id/fl_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:id="@+id/hi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/image_view"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_view"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="20dp"
        app:civ_border_color="@color/brown"
        app:civ_border_width="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hi" />
    <LinearLayout
        android:id="@+id/master_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/first_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/email_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_info"
                android:textColor="@color/brown"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:paddingStart="16dp"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.061"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_linear"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_info"
                android:textColor="@color/brown"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintHorizontal_bias="0.062"/>
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_editProfile"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundstyle"
        android:text="@string/edit_profile"
        android:textSize="17sp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/master_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/logout"
        />


    <Button
        android:id="@+id/logout"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/roundstyle"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textSize="17sp"

        app:layout_constraintTop_toBottomOf="@id/btn_editProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>